<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/profilePhoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="40dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                app:srcCompat="@mipmap/profile_photo_foreground" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:text="@string/name"
            android:layout_marginVertical="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toBottomOf="@id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profilePhoto" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/title_1"
            android:text="@string/title_1"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:gravity="start"
            android:id="@+id/paragraph_1"
            android:text="@string/paragraph_1"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/title_2"
            android:text="@string/title_2"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/paragraph_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:gravity="start"
            android:id="@+id/paragraph_2"
            android:text="@string/paragraph_2"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/title_3"
            android:text="@string/title_3"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/paragraph_2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:gravity="start"
            android:id="@+id/paragraph_3"
            android:text="@string/paragraph_3"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_3" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_me"
            android:id="@+id/call_me"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/paragraph_3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
